<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mimick_vendor</name>
  <version>0.6.0</version>
  <description>
    Wrapper around mimick, it provides an ExternalProject build of mimick.
  </description>

  <maintainer email="vicenbarser@gmail.com">Vicente Barreiro</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>  <!-- mimick is MIT -->

  <url type="website">https://github.com/ziyao233/Mimick</url>

  <author email="vicenbarser@gmail.com">Vicente Barreiro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
